# mathsketch

./: .env.docker  .env.local  .gitattributes  .gitignore  Dockerfile  Line_End_Test.txt  README.md  docker-compose.yml  fly.db.toml  fly.toml  pyproject.toml  requirements.lock.txt  requirements.txt  requirements_top.txt  test_gpu.py
.github/workflows/: fly-deploy.yml
app/: db.py  main.py  mnist_dense_classifier.py  model.py
deprecated/: requirements.txt  requirements_venv-convert.txt
mathsketch/: crud.py  db.py  inference.py  inference_old.py  init_db.py  main.py  mnist_dense_classifier.py  model.py  models.py  schemas.py
mathsketch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mathsketch/tools/: mnist_dense_classifier.py  model_converter_k-tf.py
models/: trained_model.onnx
requirements/: runtime.in  runtime.txt  tools.txt  train.txt  train_CPU.in  train_CPU.txt  train_GPU.in  train_GPU.txt
static/: index.html  index_script.js  index_style.css  main.js  style.css
tests/: tf_test.py
tools/: mnist_dense_classifier.py  model_converter_k-tf.py  model_converter_tf-onnx.sh
